# todoist-bot

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
tests/: test_todoist_bot.py
todoist_bot/: config.py  run_bot.py  servises.py  template_project.csv
